[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiossh"
version = "1.0.0"
description = "Async SSH client library for Python with connection pooling, tunneling, and security features"
readme = "README.md"
license = "MIT"
authors = [
    {name = "PyHPDev", email = "dev@pyhp.dev"}
]
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.14.0,<3.0.0",
    "cryptography>=42.0.0",
    "aiofiles>=23.0.0",
    "orjson>=3.9.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
keywords = ["ssh", "async", "asyncio", "security", "cryptography", "sftp", "pool", "tunneling", "proxy"]

[project.urls]
Homepage = "https://github.com/pyhpdev/aiossh"
Documentation = "https://github.com/pyhpdev/aiossh#readme"
Repository = "https://github.com/pyhpdev/aiossh"
Issues = "https://github.com/pyhpdev/aiossh/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aiossh*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
aiossh = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
