[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiossh"
version = "1.1.1"
description = "Professional async SSH client with pooling, tunneling, encrypted sessions, parallel transfers, recording, and strong security. v1.1.0 - All bugs fixed."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "PyHPDev", email = "dev@pyhp.dev"}]
keywords = ["ssh", "async", "asyncio", "security", "sftp", "pool", "tunneling", "docker", "kubernetes", "webhook"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "asyncssh>=2.14.0,<3.0.0",
    "cryptography>=42.0.0",
    "aiofiles>=23.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "ruff>=0.4", "pytest>=8.0", "pytest-asyncio>=0.23"]
web = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/PyHPDev/aiossh"
Repository = "https://github.com/PyHPDev/aiossh"
Issues = "https://github.com/PyHPDev/aiossh/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aiossh = ["py.typed"]
