[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiossh"
version = "1.1.3"
description = "Asynchronous SSH client library with connection pooling, SSH tunneling, encrypted session storage, parallel file transfer, session recording/replay, and input validation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "bluedock"}]
keywords = ["ssh", "async", "asyncio", "security", "sftp", "pool", "tunneling", "docker", "webhook"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "asyncssh>=2.14.0,<3.0.0",
    "cryptography>=42.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "ruff>=0.4", "pytest>=8.0", "pytest-asyncio>=0.23"]
web = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/bluedock/aiossh"
Repository = "https://github.com/bluedock/aiossh"
Issues = "https://github.com/bluedock/aiossh/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aiossh = ["py.typed"]
